--- a/src/assets/scss/Foundation/_variable.scss
+++ b/src/assets/scss/Foundation/_variable.scss
@@ -8,25 +8,8 @@ $color_sub1: #e6d9b9;
 $color_sub2: #707070;
 $twitter: #1DA1F2;
 
-$font-family_default: "Noto Sans JP", "游ゴシック", YuGothic, "ヒラギノ角ゴ Pro W3", Meiryo, sans-serif;
+$font-family_default: Avenir, Helvetica, "Noto Sans JP", "游ゴシック", YuGothic, "ヒラギノ角ゴ Pro W3", Meiryo, sans-serif;
 $font-family_em: 'Oswald', "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
-
-
-// $font-size_s: 12px;
-// $font-size_m: 14px;
-// $font-size_default: 16px;
-// $font-size_l: 20px;
-// $font-size_2l: 24px;
-// $font-size_3l: 32px;
-// $font-size_em: 40px;
-
-// $space_s: 10px;
-// $space_m: 15px;
-// $space_default: 20px;
-// $space_l: 25px;
-// $space_2l: 30px;
-// $space_3l: 40px;
-// $space_4l: 80px;
 
 $font-size_s: 12px;
 $font-size_m: 16px;
