--- a/src/assets/scss/Object/Project/_works.scss
+++ b/src/assets/scss/Object/Project/_works.scss
@@ -1,17 +1,34 @@
 .p-works {
   width: 100%;
   &__header {
-    background: rgba($color: $color_sub1, $alpha: 1);
-    padding: $space_default $space_default $space_l;
     display: flex;
+    flex-wrap: wrap;
+    margin-bottom: $space_default;
+    margin-right: -$space_default;
   }
-  &__title {
+  &__name {
     cursor: pointer;
+    box-sizing: border-box;
+    border-bottom: 2px solid rgba($color: $color_sub1, $alpha: 0);
     font-size: $font-size_l;
+    padding: $space_xs 0;
+    margin-right: $space_default;
+    text-align: center;
+    width: calc(33.33% - #{$space_default});
+    &:last-child {
+      margin-right: 0;
+    }
+    &:hover {
+      opacity: 0.6;
+      border-bottom: 2px solid rgba($color: $color_main, $alpha: 1);
+    }
+    &.active {
+      border-bottom: 2px solid rgba($color: $color_main, $alpha: 1);
+    }
   }
   &__body {
     display: flex;
-    background: rgba($color: $color_sub1, $alpha: 1);
+    // background: rgba($color: $color_sub1, $alpha: 1);
   }
   &__left, &__right {
     width: 50%;
