--- a/src/assets/scss/Object/Project/_works.scss
+++ b/src/assets/scss/Object/Project/_works.scss
@@ -25,16 +25,39 @@
     &.active {
       border-bottom: 2px solid rgba($color: $color_main, $alpha: 1);
     }
+    @include mq('md') {
+      font-size: $font-size_m;
+    }
+    @include mq('sm') {
+      font-size: $font-size_s;
+      margin-right: $space_s;
+      width: calc(50% - #{$space_s});
+      &:nth-child(3n) {
+        margin-right: $space_s;
+      }
+      &:nth-child(2n) {
+        margin-right: 0;
+      }
+    }
   }
   &__body {
     display: flex;
-    // background: rgba($color: $color_sub1, $alpha: 1);
+    @include mq() {
+      display: block;
+    }
   }
   &__left, &__right {
     width: 50%;
+    @include mq() {
+      width: 100%;
+    }
   }
   &__right {
-    padding: $space_default;
+    padding-left: $space_default;
+    @include mq() {
+      padding-left: 0;
+      margin-top: $space_default;
+    }
   }
   &__link {
     display: flex;
@@ -45,5 +68,15 @@
   }
   &__subtitle {
     font-size: $font-size_l;
+    margin-bottom: $space_s;
+    @include mq('md') {
+      font-size: $font-size_m;
+    }
+  }
+  &__text {
+    font-size: $font-size_m;
+    @include mq('md') {
+      font-size: $font-size_s;
+    }
   }
 }
