ハンバーガーメニューのJS実装、フッターのリンク設定

--- a/src/assets/scss/Object/Component/_spNav.scss
+++ b/src/assets/scss/Object/Component/_spNav.scss
@@ -15,7 +15,7 @@
     text-align: center;
   }
   &__link {
-    display: inline-block;
+    display: block;
     font-size: $font-size_m;
     padding: $space_s 0;
     transition: $time_s;
