--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -23,6 +23,7 @@
 // Project
 @import 'Object/Project/hero';
 @import 'Object/Project/works';
+@import 'Object/Project/profile';
 
 // Utility
 @import 'Object/Utility/mb0';
