--- a/src/assets/scss/Layout/_header.scss
+++ b/src/assets/scss/Layout/_header.scss
@@ -21,7 +21,7 @@
     padding: 0 $space_m;
   }
   &__title {
-    font-size: $font-size_em;
+    font-size: $font-size_xl;
     font-family: $font-family_em;
     &:hover {
       color: $color_default;
