--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -13,9 +13,10 @@
 
 // Component
 @import 'Object/Component/flaBtn';
+@import 'Object/Component/form';
+@import 'Object/Component/menuTrigger';
 @import 'Object/Component/nav';
 @import 'Object/Component/spNav';
-@import 'Object/Component/menuTrigger';
 
 // Project
 @import 'Object/Project/hero';
@@ -27,3 +28,4 @@
 @import 'Object/Utility/mr5';
 @import 'Object/Utility/mr20';
 @import 'Object/Utility/bgSubColor';
+@import 'Object/Utility/textCenter';
