--- a/src/assets/scss/Object/Project/_hero.scss
+++ b/src/assets/scss/Object/Project/_hero.scss
@@ -1,8 +1,8 @@
 .p-hero {
   box-sizing: border-box;
-  background: linear-gradient(to top, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.6)),url('/img/hero2.jpg');
-  background: -moz-linear-gradient(top, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.6)),url('/img/hero2.jpg');
-  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.6)),url('/img/hero2.jpg');
+  background: linear-gradient(to top, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.6)),url('/img/hero.jpg');
+  background: -moz-linear-gradient(top, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.6)),url('/img/hero.jpg');
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.6)),url('/img/hero.jpg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -19,18 +19,6 @@
   }
   @include mq('sm') {
     min-height: 400px;
-  }
-  &__inner {
-    display: inline-block;
-    flex-direction: column;
-    align-items: center;
-    // width: 60%;
-    padding: $space_xl;
-    background: rgba($color: $color_bg, $alpha: 0.7);
-    @include mq('md') {
-      width: 80%;
-      padding: $space_m;
-    }
   }
   &__title {
     text-align: center;
